SubBt/force-app/main/default/objects/Resource_Log_Details__c/Resource_Log_Details__c.object-meta.xml
<CustomObject>
    <label>Resource Log Detail</label>
    <nameField>
        <displayFormat>RLD - {000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>