SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account or Company the work is assigned to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resource Log Details</relationshipLabel>
    <relationshipName>Resource_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>