SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Detailed_Man_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Man_Hours_Worked__c</fullName>
    <formula>((((End_Time__c -Start_Time__c)*24*60)- (Lunch_In_Time__c-Lunch_Out_Time__c)*24*60)/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total hours clocked for the resource.  Accounting for lunch break.</inlineHelpText>
    <label>Total Detailed Man Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>