SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>Time the resource clocked out from the job.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>