SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Lunch_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Out_Time__c</fullName>
    <inlineHelpText>Time the resource clocked out for lunch.</inlineHelpText>
    <label>Lunch Out Time</label>
    <type>DateTime</type>
</CustomField>