SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/of_Workers__c.field-meta.xml
<CustomField>
    <fullName>of_Workers__c</fullName>
    <label># of Workers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>