SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Resource who is assigned the work.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Log Details</relationshipLabel>
    <relationshipName>Resource_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>