SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Time the resource clocked in for work.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>