SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <formula>of_Workers__c *  Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Hours Worked is based on Hours entered.  This is not an actual reflection of the time spent on the job.  If you are wanting a more accurate reflection of hours worked use the Total Detailed Man Hours Worked.</inlineHelpText>
    <label>Total Man Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>