SubBt/force-app/main/default/objects/Resource_Log_Details__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <inlineHelpText>Date the resource was working.</inlineHelpText>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>